--- a/apps/dreams-app/project.json
+++ b/apps/dreams-app/project.json
@@ -19,7 +19,10 @@
           "apps/dreams-app/src/assets",
           "apps/dreams-app/src/_redirects"
         ],
-        "styles": ["apps/dreams-app/src/styles.css"],
+        "styles": [
+          "apps/dreams-app/src/styles.css",
+          "node_modules/bootstrap/dist/css/bootstrap.min.css"
+      ],
         "scripts": []
       },
       "configurations": {
