Copied api and installed dependencies

--- a/package.json
+++ b/package.json
@@ -19,9 +19,14 @@
     "@angular/platform-browser": "~14.2.0",
     "@angular/platform-browser-dynamic": "~14.2.0",
     "@angular/router": "~14.2.0",
+    "@nestjs/common": "^9.2.1",
+    "@nestjs/mongoose": "^9.2.1",
     "@ng-bootstrap/ng-bootstrap": "^13.1.1",
     "@nrwl/angular": "15.1.1",
+    "@types/bcrypt": "^5.0.0",
+    "@types/jsonwebtoken": "^8.5.9",
     "bootstrap": "^5.2.3",
+    "mongoose": "^6.8.0",
     "ngx-bootstrap": "^9.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
