--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,6 +15,7 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
+      "@dreams/auth": ["libs/auth/src/index.ts"],
       "@dreams/entity": ["libs/entity/src/index.ts"],
       "@dreams/utility": ["libs/utility/src/index.ts"]
     }
