--- a/libs/data/tsconfig.lib.json
+++ b/libs/data/tsconfig.lib.json
@@ -13,5 +13,5 @@
     "jest.config.ts",
     "**/*.test.ts"
   ],
-  "include": ["**/*.ts", "../data/src/lib/post.interface.ts"]
+  "include": ["**/*.ts"]
 }
